--- a/chanell.html
+++ b/chanell.html
@@ -149,12 +149,20 @@
                         <p>scvb dfgh dfgh dfg</p>
                     </div>
 
-                    <div class="add-coment">
-                        <input type="text" id="name" placeholder="name">
-                        <br>
-                        <input type="text" id="mail" placeholder="mail">
-                        <br>
-                        <textarea></textarea>
+                    <div class="add-comint">
+                        <div class="inputs left">
+                            <input type="text" id="name" placeholder="name">
+                            <input type="text" id="mail" placeholder="mail">
+                            <br>
+                            <br>
+                            <vid>
+                                <a class="send-btn">send comint to admin</a>
+                                <br>
+                                <br>
+                                <a class="send-btn">send comint to all</a>
+                            </vid>
+                        </div>
+                        <textarea class="right"></textarea>
                     </div>
                 </div>
             </div>
