--- a/admin.html
+++ b/admin.html
@@ -40,7 +40,7 @@
             </div>
            <!--add a class with video-->
             <div class="title">
-                <div id="down1" class="up-down-left-right up-down down right" onclick="show('mainClass1')"></div>
+                <div id="down1" class="up-down-left-right up-down down right" onclick="openMainClass('1')"></div>
                 <h3>evening class </h3>
             </div>
             <div id="mainClass1"  class="videos">
