--- a/home.html
+++ b/home.html
@@ -27,7 +27,7 @@
 			<!--main class 1-->
 			<div>
 				<div class="title">
-					<a id="down1" class="up-down-left-right up-down down right" onclick="show('mainClass1')"></a>
+					<a id="down1" class="up-down-left-right up-down down right" onclick="openMainClass('1')"></a>
 					<h3>morning class </h3>
 				</div>
 				<div id="mainClass1"  class="videos">
@@ -96,7 +96,7 @@
 			<!--main class 2-->
 			<div>
 				<div class="title">
-					<a id="down2" class="up-down-left-right up-down down right" onclick="show('mainClass2')"></a>
+					<a id="down2" class="up-down-left-right up-down down right" onclick="openMainClass('2')"></a>
 					<h3>afternoon class </h3>
 				</div>
 				<div id="mainClass2"  class="videos">
@@ -164,7 +164,7 @@
 			<!--main class 3-->
 			<div>
 				<div class="title">
-					<a id="down3" class="up-down-left-right up-down down right" onclick="show('mainClass3')"></a>
+					<a id="down3" class="up-down-left-right up-down down right" onclick="openMainClass('3')"></a>
 					<h3>evening class </h3>
 				</div>
 				<div id="mainClass3" class="videos">
