--- a/chanell.html
+++ b/chanell.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <div class="menu">
-                <ul class="in-block main-menu">
+                <ul class="main-menu">
                     <li class="padding-list left"><a class="go-to" href="home.html">home</a></li>
                     <li class="padding-list left"><a class="go-to" href="home.html">by speaker</a></li>
                     <li class="padding-list left"><a class="go-to" href="home.html">by topik</a></li>
@@ -16,7 +16,7 @@
                     <li class="padding-list left"><a class="go-to">contect us</a></li>
                     <li class="padding-list left"><a class="go-to">donate</a></li>
                 </ul>
-                <div id="lines/x" onclick="mobileMenu()" class="in-block lines right"></div>
+                <div id="lines/x" onclick="mobileMenu()" class="lines right"></div>
             </div>
             <div id="search" class="show">
 				<label for="head-name">pick a speaker/topik:</label>
