--- a/design.html
+++ b/design.html
@@ -6,13 +6,14 @@
     </head>
     <body>
         <h2>design the page</h2>
-        <label for="schoole">schoole name:</label>
-        <input type="text" name="schoole">
-        <br>
-        <label for="img">header image:</label>
-        <input type="file" name="img">
-        <script src="js/all.js"></script>
+        
         <div class="inputs">
+            <label for="schoole">schoole name:</label>
+            <input type="text" name="schoole">
+            <br>
+            <label for="pick">header image:</label>
+            <input type="file" name="pick" value="img/rozenblum.jpg">
+            <br>
             <label for="base">background color:</label>
             <input type="color" name="base" value="#f0e68c"></input>
             <br>
@@ -21,6 +22,100 @@
             <br>
             <label for="third">third color:</label>
             <input type="color" name="third" value="#FFFFFF"></input>
+        </div>
+
+        <div>
+            <div class="pick"></div>
+            <div class="title">
+                <a id="down3" class="up-down-left-right up-down down right" onclick="openMainClass('3')"></a>
+                <h3>evening class </h3>
+            </div>
+            <div id="mainClass3" class="videos">
+                <a class="up-down-left-right left-right btn-left" onclick="nextLeft(3)"></a>
+                <a class="up-down-left-right left-right btn-right" onclick="nextRight(3)"></a>
+                <ul class="vids">
+                    <li id="vid3-1" class="vid-cover">
+                        <video controls>
+                            <source src="css/videos/vid.mp4" type="video/mp4">
+                        </video>
+                        <p>speaker............</p>
+                        <h4>subgect</h4>
+                        <a href="sighnIn.html">listen</a>
+                    </li>
+                    <li id="vid3-2" class="vid-cover">
+                        <video controls>
+                            <source src="css/videos/vid.mp4" type="video/mp4">
+                        </video>
+                        <p>speaker............</p>
+                        <h4>subgect</h4>
+                        <a href="sighnIn.html">listen</a>
+                    </li>
+                    <li id="vid3-3" class="vid-cover">
+                        <video controls>
+                            <source src="css/videos/vid.mp4" type="video/mp4">
+                        </video>
+                        <p>speaker............</p>
+                        <h4>subgect</h4>
+                        <a href="sighnIn.html">listen</a>
+                    </li>
+                    <li id="vid3-4" class="vid-cover">
+                        <video controls>
+                            <source src="css/videos/vid.mp4" type="video/mp4">
+                        </video>
+                        <p>speaker............</p>
+                        <h4>subgect</h4>
+                        <a href="sighnIn.html">listen</a>
+                    </li>
+                    <li id="vid3-5" class="vid-cover">
+                        <video controls>
+                            <source src="css/videos/vid.mp4" type="video/mp4">
+                        </video>
+                        <p>speaker............</p>
+                        <h4>subgect</h4>
+                        <a href="sighnIn.html">listen</a>
+                    </li>
+                    <li id="vid3-6" class="vid-cover">
+                        <video controls>
+                            <source src="css/videos/vid.mp4" type="video/mp4">
+                        </video>
+                        <p>speaker............</p>
+                        <h4>subgect</h4>
+                        <a href="sighnIn.html">listen</a>
+                    </li>
+                    <li id="vid3-7" class="vid-cover">
+                        <video controls>
+                            <source src="css/videos/vid.mp4" type="video/mp4">
+                        </video>
+                        <p>speaker............</p>
+                        <h4>subgect</h4>
+                        <a href="sighnIn.html">listen</a>
+                    </li>
+                    <li id="vid3-8" class="vid-cover">
+                        <video controls>
+                            <source src="css/videos/vid.mp4" type="video/mp4">
+                        </video>
+                        <p>speaker............</p>
+                        <h4>subgect</h4>
+                        <a href="sighnIn.html">listen</a>
+                    </li>
+                    <li id="vid3-9" class="vid-cover">
+                        <video controls>
+                            <source src="css/videos/vid.mp4" type="video/mp4">
+                        </video>
+                        <p>speaker............</p>
+                        <h4>subgect</h4>
+                        <a href="sighnIn.html">listen</a>
+                    </li>
+                    <li id="vid3-10" class="vid-cover">
+                        <video controls>
+                            <source src="css/videos/vid.mp4" type="video/mp4">
+                        </video>
+                        <p>speaker............</p>
+                        <h4>subgect</h4>
+                        <a href="sighnIn.html">listen</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         <script src="js/all.js"></script>
     </body>
